Navbar virkni komin

--- a/IV/styles/site.less
+++ b/IV/styles/site.less
@@ -38,9 +38,22 @@ body {
 
     .container {
         width: 768px;
-        background-color: red;
         margin: 0 auto;
         margin-top: 150px;
         margin-bottom: 100px;
+    }
+
+
+    .pizza-wrapper {
+        box-shadow:  5px 5px 20px rgba(155, 155, 155, .5);
+        margin: 0 auto;
+        text-align: center;
+        padding: 20px;
+    }
+
+    .pizza-wrapper .pizza-name {
+        margin-top: 10px;
+        font-size: 24px;
+        font-weight: bold;
     }
 }
