--- a/IV/styles/site.less
+++ b/IV/styles/site.less
@@ -56,4 +56,9 @@ body {
         font-size: 24px;
         font-weight: bold;
     }
+
+    .cartContainer {
+        width: 200px;
+        position: fixed;
+    }
 }
