--- a/IV/styles/site.less
+++ b/IV/styles/site.less
@@ -59,7 +59,7 @@ body {
 
     .cartContainer {
         width: 200px;
-        position: fixed;
+
     }
 
     .offer-wrapper {
@@ -83,6 +83,29 @@ body {
             float: left;
             margin: 10px;
         }
+    }
 
+    .checkout-container {
+
+        .deliver-or-pickup {
+            border-bottom: solid 1px rgba(155, 155, 155, .5);
+            display: inline-block;
+            text-align: center;
+            line-height: 40px;
+            height: 40px;
+            width: 200px;
+            &.active {
+                background-color: rgba(155, 155, 155, .5);
+            }
+            text-decoration: none;
+            color: black;
+            font-size: 1.2em;
+        }
+    }
+
+    .main-page-cart {
+        float: right;
+        
+        width: 200px;
     }
 }
